# GalHub

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.bat
src/common/: env.cpp  env.h  inject.cpp  inject.h  json_extend.hpp  util.cpp  util.h
src/helper/: main.cpp
src/hook/: main.cpp  nt.hpp  nt_create_file.hpp  nt_open_file.hpp  nt_query_attributes_file.hpp  nt_set_information_file.hpp  path_util.cpp  path_util.h
src/hub/: env_manager.cpp  env_manager.h  main.cpp  runner.cpp  runner.h
src/hub/gui/: add_game_dialog.cpp  add_game_dialog.h  auto_deselect_event_filter.cpp  auto_deselect_event_filter.h  game_config_dialog.cpp  game_config_dialog.h  game_config_rules_widget.cpp  game_config_rules_widget.h  game_table.cpp  game_table.h  main_window.cpp  main_window.h  path_edit_group.cpp  path_edit_group.h  rule_diag.cpp  rule_diag.h
